--- a/haste.html
+++ b/haste.html
@@ -122,11 +122,7 @@
           
           <!-- Input Mode & Value -->
           <div class="control-group">
-            <h3 class="control-header">Haste Input</h3>
-            <div class="toggle-buttons" role="group" aria-label="Input mode selection">
-              <button class="toggle-btn active" data-mode="rating" aria-pressed="true">Haste Rating</button>
-              <button class="toggle-btn" data-mode="percentage" aria-pressed="false">Haste %</button>
-            </div>
+            <h3 class="control-header">Haste Rating</h3>
             <input
               type="number"
               id="hasteInput"
@@ -158,20 +154,6 @@
               <div class="buff-info">
                 <span class="buff-name">Troll</span>
                 <span class="buff-description">Berserking racial</span>
-              </div>
-            </label>
-          </div>
-
-          <!-- Set Bonus -->
-          <div class="control-group">
-            <h3 class="control-header">Set Bonus</h3>
-            <label class="buff-toggle">
-              <input type="checkbox" id="t14Bonus" class="race-checkbox buff-checkbox">
-              <span class="buff-switch" aria-hidden="true"></span>
-              <img src="https://wow.zamimg.com/images/wow/icons/large/inv_helmet_cloth_challengepriest_d_01.jpg" alt="" class="buff-icon" aria-hidden="true">
-              <div class="buff-info">
-                <span class="buff-name">T14 4pc Bonus</span>
-                <span class="buff-description">Extended DoT durations</span>
               </div>
             </label>
           </div>
