--- a/haste.html
+++ b/haste.html
@@ -116,7 +116,7 @@
 		Devouring Plague – 6 ticks base – 6 sec duration</p>
       </header>
 
-      <!-- NEW: Top Controls Section -->
+      <!-- Top Controls Section -->
       <section class="haste-controls-section">
         <div class="haste-controls-grid">
           
