--- a/haste.html
+++ b/haste.html
@@ -111,9 +111,7 @@
     <div class="haste-container">
       <header class="haste-header">
         <h1>Shadow Priest Haste Calculator</h1>
-        <p>Vampiric Touch – 5 ticks base – 15 sec duration<br>
-		Shadow Word: Pain – 6 ticks base – 18 sec duration<br>
-		Devouring Plague – 6 ticks base – 6 sec duration</p>
+        <p>GDD Cap: 18,215 rating</p>
       </header>
 
       <!-- Top Controls Section -->
