--- a/haste.html
+++ b/haste.html
@@ -119,19 +119,20 @@
         <div class="haste-controls-grid">
           
           <!-- Input Mode & Value -->
-          <div class="control-group">
-            <h3 class="control-header">Haste Rating</h3>
-            <input
-              type="number"
-              id="hasteInput"
-              class="haste-input"
-              min="0"
-              max="20000"
-              step="1"
-              placeholder="0"
-              aria-label="Haste input value"
-            />
-          </div>
+		<div class="control-group">
+		  <h3 class="control-header">Haste Rating</h3>
+		  <input
+		    type="number"
+		    id="hasteInput"
+		    class="haste-input"
+		    min="0"
+		    max="20000"
+		    step="1"
+		    placeholder="0"
+		    aria-label="Haste input value"
+		  />
+		  <div id="gcdWarningInput"></div>
+		</div>
 
           <!-- Race Selection -->
           <div class="control-group">
