--- a/haste.html
+++ b/haste.html
@@ -122,7 +122,7 @@
 		<div class="control-group">
 		  <h3 class="control-header">Haste Rating</h3>
 		  <input
-		    type="number"
+		    type="text"
 		    id="hasteInput"
 		    class="haste-input"
 		    min="0"
