--- a/test1_.html
+++ b/test1_.html
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/16.png">
   <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/test1_clean.css" />
+  <link rel="stylesheet" href="css/test1_.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
