--- a/test1_.html
+++ b/test1_.html
@@ -230,28 +230,28 @@
         // Add the compact tabbed instructions box
         container.innerHTML += `
           <div class="item-card instructions-card">
-            <div class="item-name">Installation & Setup</div>
+            <div class="item-name">How to install SUF Profile</div>
             <div class="tab-buttons">
               <button class="tab-btn active" data-tab="install">How to Install</button>
               <button class="tab-btn" data-tab="spells">Add Spells</button>
             </div>
             <div class="tab-content active" data-tab="install">
               <ol>
-                <li>Type <code>/suf</code> in-game</li>
+                <li><code>/suf</code></li>
                 <li>Go to <strong>General → Advanced</strong></li>
                 <li>Open <strong>Layout Manager</strong></li>
                 <li>Click <strong>Import</strong></li>
-                <li>Type <code>/reload</code></li>
+                <li><code>/reload</code></li>
               </ol>
             </div>
             <div class="tab-content" data-tab="spells">
               <ol>
-                <li>Type <code>/suf</code></li>
+                <li><code>/suf</code></li>
                 <li>Go to <strong>Aura Filters</strong></li>
                 <li>Click <strong>Manage Aura Filters</strong></li>
-                <li>Navigate to <strong>Whitelists → MOP → View</strong></li>
+                <li>Go to <strong>Whitelists → MOP → View</strong></li>
                 <li>Add spell ID</li>
-                <li>Close</li>
+                <li><code>/reload</code></li>
               </ol>
             </div>
           </div>
