--- a/test1_.html
+++ b/test1_.html
@@ -230,7 +230,7 @@
         // Add the compact tabbed instructions box
         container.innerHTML += `
           <div class="item-card instructions-card">
-            <div class="item-name">How to install SUF Profile</div>
+            <div class="item-name">Shadowed Unit Frames FAQ</div>
             <div class="tab-buttons">
               <button class="tab-btn active" data-tab="install">How to Install</button>
               <button class="tab-btn" data-tab="spells">Add Spells</button>
