--- a/test1_.html
+++ b/test1_.html
@@ -243,6 +243,9 @@
                 <li>Click <strong>Import</strong></li>
                 <li><code>/reload</code></li>
               </ol>
+              <div class="disclaimer">
+                Copy the code from the <strong>Editor tab</strong> on Wago. If you cannot see anything, try Incognito or a different browser.
+              </div>
             </div>
             <div class="tab-content" data-tab="spells">
               <ol>
