--- a/test1_.html
+++ b/test1_.html
@@ -241,11 +241,9 @@
                 <li>Go to <strong>General → Advanced</strong></li>
                 <li>Open <strong>Layout Manager</strong></li>
                 <li>Click <strong>Import</strong></li>
+                <li>Paste code → Accept</li>
                 <li><code>/reload</code></li>
               </ol>
-              <div class="disclaimer">
-                Copy the code from the <strong>Editor tab</strong> on Wago. If you cannot see anything, try Incognito or a different browser.
-              </div>
             </div>
             <div class="tab-content" data-tab="spells">
               <ol>
