--- a/test1_.html
+++ b/test1_.html
@@ -69,7 +69,7 @@
           </a>
         </li>
         <li>
-          <a href="/addons" class="active">
+          <a href="/test1_" class="active">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
               <line x1="9" y1="3" x2="9" y2="21"/>
