--- a/test1_.html
+++ b/test1_.html
@@ -426,10 +426,10 @@
       
       <ul class="faq-list">
         <li class="faq-item"><strong>ABC</strong> - Always be casting</li>
-        <li class="faq-item"><strong>DOT Uptime</strong> - Maintain Shadow Word: Pain and Vampiric Touch on all targets</li>
-        <li class="faq-item"><strong>Planned Movement</strong> - Use instant casts during movement phases</li>
+        <li class="faq-item"><strong>DOT Uptime</strong> - Maintain 95%+ uptime Shadow Word: Pain and Vampiric Touch</li>
+        <li class="faq-item"><strong>DOT Snapshots</strong> - Recast SW:P and VT when <a href="https://www.wowhead.com/mop-classic/item=96930/unerring-vision-of-lei-shen" class="wowhead" data-wowhead="item=96930&bonus=449" style="color: #a335ee; text-decoration: none; border-bottom: 1px dotted #a335ee;">UVLS</a> procs</li>
         <li class="faq-item"><strong>Snipe mobs</strong> - Use SWP/SWD on adds for Twist of Fate procs and Shadow Orbs</li>
-        <li class="faq-item"><strong>Haste Breakpoints</strong> - Optimize gear to hit key haste thresholds for extra ticks</li>
+        <li class="faq-item"><strong>Haste Breakpoints</strong> - Hit key haste thresholds for extra DOT ticks</li>
       </ul>
     </div>
   </div>
