--- a/test1_.html
+++ b/test1_.html
@@ -127,11 +127,9 @@
     <!-- Talent Selector -->
     <div class="section-card">
       <div class="section-header">
-        <h2 class="section-title">Popular Talents by Boss</h2>
-        
         <div class="tier-toggle">
-          <button class="tier-btn" data-tier="t14">T14</button>
-          <button class="tier-btn active" data-tier="t15">T15</button>
+          <button class="tier-btn" data-tier="t14">T14 Boss Talents</button>
+          <button class="tier-btn active" data-tier="t15">T15 Boss Talents</button>
         </div>
         
         <button class="back-button hidden" id="backButton" onclick="goBackToBossSelection()">
