--- a/test1_.html
+++ b/test1_.html
@@ -154,7 +154,7 @@
       <ul class="faq-list">
         <li class="faq-item"><strong>ABC</strong> - Always be casting</li>
         <li class="faq-item"><strong>DOT Uptime</strong> - Maintain 95%+ uptime on <a href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain" class="wowhead">SW:P</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch" class="wowhead">VT</a></li>
-        <li class="faq-item"><strong>DOT Snapshots</strong> - Recast <a href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain" class="wowhead">SW:P</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch" class="wowhead">VT</a> when <a href="https://www.wowhead.com/mop-classic/item=96930/unerring-vision-of-lei-shen" class="wowhead" data-wowhead="item=96930&bonus=449">UVLS</a> procs</li>
+        <li class="faq-item"><strong>DOT Snapshots</strong> - Recast <a href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain" class="wowhead">SW:P</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch" class="wowhead">VT</a> when <a href="https://www.wowhead.com/mop-classic/item=96930/unerring-vision-of-lei-shen" class="wowhead">UVLS</a> procs</li>
         <li class="faq-item"><strong>Snipe mobs</strong> - Cast <a href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain" class="wowhead">SWP</a> & SWD on adds for <a href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate" class="wowhead">Twist of Fate</a> procs and <a href="https://www.wowhead.com/mop-classic/spell=95740/shadow-orbs" class="wowhead">Shadow Orbs</a></li>
         <li class="faq-item"><strong>Haste Breakpoints</strong> - Optimise your stats to gain extra DOT ticks</li>
       </ul>
