--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <div class="section-card">
       <div class="stream-container">
         <iframe 
-          src="https://www.youtube.com/embed/NaYavDBjAqo"
+          src="https://www.youtube.com/embed/NaYavDBjAqo?autoplay=1&mute=1"
           allowfullscreen
           loading="lazy"
           title="RANK 1 SHADOW PRIEST → MEGAERA 25M HEROIC">
