--- a/test1_.html
+++ b/test1_.html
@@ -174,7 +174,7 @@
 
     .boss-tab-tooltip {
       position: absolute;
-      bottom: -35px;
+      top: -35px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(0, 0, 0, 0.95);
@@ -187,7 +187,7 @@
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.2s ease;
-      z-index: 10;
+      z-index: 100;
       border: 1px solid #7c3aed;
     }
 
