--- a/test1_.html
+++ b/test1_.html
@@ -316,131 +316,113 @@
       {
         id: 'jinrokh', name: "Jin'rokh the Breaker", enc: 51577,
         tips: [
-          'Pot at 15s pull timer',
-          'Use CDs / Lust / 2nd Pot with <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138002/fluidity?dd=6">Fluidity</a>',
-          'Pray for UVLS proc',
-          'After removing <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138733/ionization?dd=6">Ionization</a>, briefly reenter <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138470/conductive-water?dd=6">Conductive Water</a> and recast DOTs',
-          'Use Vampiric Embrace during <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=137261/lightning-storm?dd=6">Lightning Storm</a> (and Dispersion if necessary)'
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=105702/potion-of-the-jade-serpent">Pot</a> at 15s pull timer',
+          'Use CDs/Lust/2nd Pot with <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138002/fluidity?dd=6">Fluidity</a>',
+          'Pray for <a class="wowhead" href="https://www.wowhead.com/mop-classic/item=96558/unerring-vision-of-lei-shen">UVLS</a> proc',
+          'After removing <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138733/ionization?dd=6">Ionization</a>, briefly reenter <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138002/fluidity?dd=6">Fluidity</a> and recast DOTs',
+          'Use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=15290/vampiric-embrace">Vampiric Embrace</a> during <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=137261/lightning-storm?dd=6">Lightning Storm</a> (and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=47585/dispersion">Dispersion</a> if necessary)'
         ]
       },
       {
         id: 'horridon', name: "Horridon", enc: 51575,
         tips: [
-          "Focus damage on Direhorn adds during door phases",
-          "Use Mass Dispel on Dinomancers to remove damage buffs",
-          "Position yourself to avoid Charge from Horridon",
-          "Stack for Dread Thrash and use raid cooldowns",
-          "Save cooldowns for final burn phase after all doors"
+          'Shadow Word: Pain small adds, SW:P and VT marked elite adds',
+          'SW:P and VT Direhorn Spirit for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138156/item-priest-t15-shadow-2p-bonus">T15 knockback bonus</a>',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a> when adds are stacked together',
+          'Multidot focus for high uptime on <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and Shadow Orbs',
+          'Use Devouring Plague and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138158/item-priest-t15-shadow-4p-bonus">Mind Flay: Insanity</a> on Horridon',
+          'Ignore War-God Jalak, and use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=15290/vampiric-embrace">Vampiric Embrace</a> during a dangerous <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=136817/bestial-cry">Bestial Cry</a>'
         ]
       },
       {
         id: 'council', name: "Council of Elders", enc: 51570,
         tips: [
-          "Kill order: Kazra'jin → Sul → Frost King → High Priestess Mar'li",
-          "Dispel Quicksand on allies immediately",
-          "Move out of Sandstorm when it appears",
-          "Stack behind boss for Frigid Assault cleave",
-          "Interrupt Shadowed Loa Spirit casts when possible"
+          'Stack in melee and use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=122128/divine-star">Divine Star</a> on CD',
+          'Double dot all bosses and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a>'
         ]
       },
       {
         id: 'tortos', name: "Tortos", enc: 51565,
         tips: [
-          "Kick Whirl Turtle shells at boss to interrupt Furious Stone Breath",
-          "Clear Crystal Shell debuff before it expires",
-          "Save personal cooldowns for high Furious Stone Breath stacks",
-          "Position away from other ranged to avoid battering spread",
-          "Use DoT multi-dotting on bats during Heroic mode"
+          'Cast SW:P and SW:D on adds for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> uptime and Shadow Orbs',
+          'Maintain SW:P on a Humming Crystal',
+          'Spread out to avoid Whirl Turtles'
         ]
       },
       {
         id: 'megaera', name: "Megaera", enc: 51578,
         tips: [
-          "Kill heads in order: Flaming → Frozen → Venomous → Arcane",
-          "Move out of Cinders ground effect immediately",
-          "Stack for Arctic Freeze and use immunities/cooldowns",
-          "Spread for Acid Rain to minimize damage overlap",
-          "Save Shadowfiend/Mindbender for final burn phase"
+          'Ignore Venomous Head',
+          'SW:D Nether Wyrm\'s for Shadow Orbs',
+          'Consider <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=122128/divine-star">Divine Star</a> if the raid needs more healing'
         ]
       },
       {
         id: 'jikun', name: "Ji-Kun", enc: 51573,
         tips: [
-          "Collect green food from nests to gain Primal Nutriment buff (massive DPS increase)",
-          "Use Levitate/slowfall when jumping between platforms",
-          "Kill Young Egg priority on lower nests",
-          "Pool insanity before flying to nests for burst",
-          "Use Dispersion for Talon Rake if needed"
+          'Use a feather charge (extra action button) to intercept Feed Young and gain <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=112879/primal-nutriment">Primal Nutriment</a>',
+          'SW:P and VT Nest Guardian',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a> and SW:D Hatchlings',
+          'VE if needed during Quills',
+          'Pray your Fire Mages are good'
         ]
       },
       {
         id: 'durumu', name: "Durumu the Forgotten", enc: 51572,
         tips: [
-          "Multi-dot Crimson, Azure, and Amber Fog Beasts during maze",
-          "Follow your color beam during Light Spectrum phase",
-          "Use instant casts while moving during Disintegration Beam",
-          "Disperse can be used to survive missed mechanics",
-          "Stack tightly for Force of Will knockback"
+          'SW:P and SW:D the adds in the fog for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and Shadow Orbs',
+          'Time <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=120644/halo">Halo</a> and use SW:P and VT on the Ice Walls',
+          '2nd pot with 2nd <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=26297/berserking">Berserking</a>'
         ]
       },
       {
         id: 'primordius', name: "Primordius", enc: 51574,
         tips: [
-          "Collect beneficial mutations (red pools) for DPS buffs",
-          "Avoid harmful mutations (blue pools)",
-          "Use 4pc bonus Mind Blast procs during high buff stacks",
-          "Pool resources before Primordial Strike damage increases",
-          "Dispersion can save you from Evolution overlaps"
+          'SW:P and VT all the Living Fluids (Focus boss instead if multiple Affliction Warlocks)',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=127632/cascade">Cascade</a> on CD',
+          'Position camera to dodge moving puddles and debuffs'
         ]
       },
       {
         id: 'darkanimus', name: "Dark Animus", enc: 51576,
         tips: [
-          "Kill Small Golems → Medium Golems → Large Golems in order",
-          "Use Shadow Word: Death on low health adds for efficiency",
-          "Save cooldowns for Large Anima Golem and Dark Animus",
-          "Spread for Interrupting Jolt to avoid multiple interrupts",
-          "Use Dispersion for high Anima Font stacks"
+          'SW:P and VT all the Anima Golems for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and Shadow Orbs',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=127632/cascade">Cascade</a> on CD',
+          'Use Devouring Plague and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138158/item-priest-t15-shadow-4p-bonus">Mind Flay: Insanity</a> on Dark Animus'
         ]
       },
       {
         id: 'ironqon', name: "Iron Qon", enc: 51559,
         tips: [
-          "Maintain DoTs on both Qon and his current Quilen mount",
-          "Stack for Freeze during Ro'shak phase",
-          "Spread out during Dam'ren phase for Arcing Lightning",
-          "Use personal cooldowns for Unleashed Flame damage",
-          "Save hero/lust for final phase when all three spirits are active"
+          'SW:P and VT Iron Qon when he becomes available between each Quillen (Ro\'shak → Quet\'zal → Dam\'ren)',
+          'Use CDs and 2nd pot in the final phase, with all 4 targets up',
+          'Use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=15290/vampiric-embrace">Vampiric Embrace</a> during a dangerous Fist Smash'
         ]
       },
       {
-        id: 'consorts', name: "Twin Consorts", enc: 51560,
+        id: 'consorts', name: "Twin Empyreans", enc: 51560,
         tips: [
-          "Kill Lu'lin first (moon), then Suen (sun)",
-          "Stand in Light of Day during moon phase for damage buff",
-          "Use defensive cooldowns for Nuclear Inferno (sun phase)",
-          "Multi-dot both bosses when they're both active",
-          "Move efficiently through Ice Comets to break them quickly"
+          'Precast VT on Suen, then SW:P before they disappear',
+          'Recast SW:P and VT on Suen during Tears of the Sun',
+          'Help heal during Nuclear Inferno (Boss is immune)',
+          'VE during high stacks of Blazing Radiance'
         ]
       },
       {
         id: 'leishen', name: "Lei Shen", enc: 51579,
         tips: [
-          "Transition at 70%, 40%, and 10% health on each platform",
-          "Kill Diffusion Chain conduits to reduce tank damage",
-          "Stack for Static Shock bounces between players",
-          "Use speed boosts to escape Overcharged zones quickly",
-          "Save major cooldowns for final platform burn"
+          'Save 2nd <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=26297/berserking">Berserking</a>, and use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=120644/halo">Halo</a> when Ball Lightning\'s spawn followed by <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a>',
+          'SW:P and SW:D adds for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and Shadow Orbs',
+          'Save 3rd <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=26297/berserking">Berserking</a> and 2nd Pot for Bloodlust'
         ]
       },
       {
         id: 'raden', name: "Ra-den", enc: 51580,
         tips: [
-          "Balance Vita and Anima to prevent wipes (keep close to 50/50)",
-          "Kill Unstable Anima adds quickly with multi-dotting",
-          "Use Dispersion for Unstable Vita explosions",
-          "Move out of Crackling Stalker paths",
-          "Pool cooldowns for execute phase below 40%"
+          'VT and SWP the Cracking Stalker, then <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=122128/divine-star">Divine Star</a> and SW:D',
+          'SW:D the first Essence of Anima, DP and MF: I the rest',
+          'At 40% use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=122128/divine-star">Divine Star</a> on CD to help healers',
+          'Use 2nd pot / CDs and focus boss'
         ]
       }
     ];
