--- a/test1_.html
+++ b/test1_.html
@@ -22,7 +22,7 @@
   <link rel="canonical" href="https://skimmynz.com/">
   
   <script>
-    window.whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false };
+    window.whTooltips = { colorLinks: true, iconizeLinks: true, renameLinks: false };
   </script>
   <script defer src="https://wow.zamimg.com/widgets/power.js"></script>
   
